# JACKDynamicConnectionAgent

./: CMakeLists.txt  LICENCE  PKGBUILD  README.md  config.yml
cmake/: FindJack.cmake  FindProcPS.cmake  FindYamlCpp.cmake
include/: Jack.h  PatternClasses.hpp  exceptions.hpp  util.hpp
src/: Jack.cpp  main.cpp  util.cpp
